<resources>
    <string name="app_name">Ritmo de Juego</string>
    <string name="estado_placeholder">Estado de Juego</string>
    <string name="time_placeholder">TIME_PLACEHOLDER</string>
    <string name="buscar_club">Buscar club</string>
    <string name="club_name_placeholder">NOMBRE_CLUB_PLACEHOLDER</string>
    <string name="hoyo_number_placeholder">XX</string>
    <string name="guardar">Guardar</string>
    <string name="label_placeholder">LABEL_PLACEHOLDER</string>
    <string name="par_label">Par:</string>
    <string name="handicap_label">Handicap:</string>
    <string name="time_input_placeholder">HH:MM</string>
    <string name="hora_de_salida_label">Hora de salida:</string>
    <string name="hora_de_juego_label">Hora de juego:</string>
    <string name="tiempo_label">Tiempo:</string>
    <string name="clubs">Clubs</string>
    <string name="crear_club">Crear club</string>
    <string name="eliminar_club">Eliminar club</string>
    <string name="selected_number">selected number</string>
    <string name="hoyo_de_salida_label">Hoyo de salida:</string>
    <string name="hoyo_en_juego_label">Hoyo en juego:</string>
    <string name="club">Club</string>
    <string name="nombre_club_hint">Nombre del club</string>
    <string name="estado_demorado">DEMORADO</string>
    <string name="estado_en_horario">EN HORARIO</string>
    <string name="par_hint">Par</string>
    <string name="handicap_hint">HPC</string>
</resources>