<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/action_ver_clubs"
        android:icon="@drawable/baseline_settings_24"
        app:showAsAction="ifRoom"
        android:title="@string/clubs" />

    <item
        android:id="@+id/action_crear_club"
        android:icon="@drawable/baseline_add_24"
        app:showAsAction="ifRoom"
        android:title="@string/crear_club" />

    <item
        android:id="@+id/action_eliminar_club"
        android:icon="@drawable/baseline_delete_forever_24"
        app:showAsAction="ifRoom"
        android:title="@string/eliminar_club" />
</menu>