<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.main.RitmoDeJuegoFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/constraint_layout"
        android:paddingHorizontal="20dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/estado_layout"
            android:background="@drawable/border"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/club_autocomplete"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:paddingVertical="50dp"
            android:layout_marginVertical="50dp" >

            <TextView
                android:id="@+id/estado_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/estado_time"
                android:gravity="center"
                android:layout_marginBottom="10dp"
                android:textSize="24sp"
                android:text="@string/estado_placeholder" />

            <TextView
                android:id="@+id/estado_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/estado_text"
                android:gravity="center"
                android:text="@string/time_placeholder"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <AutoCompleteTextView
            android:id="@+id/club_autocomplete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/estado_layout"
            android:layout_marginVertical="30dp"/>

        <LinearLayout
            android:id="@+id/layout_salida"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/club_autocomplete"
            android:layout_marginVertical="10dp">

            <EditText
                android:id="@+id/hoyo_salida"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="5dp"
                android:inputType="number" />

            <com.elpeiretti.ritmodejuego.component.CustomTimePicker
                android:id="@+id/hora_salida"
                app:title="Hora de salida"
                android:label="@string/hora_de_salida_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="5dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_juego"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/layout_salida"
            android:layout_marginVertical="10dp">

            <EditText
                android:id="@+id/hoyo_juego"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="5dp"
                android:inputType="number" />

            <com.elpeiretti.ritmodejuego.component.CustomTimePicker
                android:id="@+id/hora_Juego"
                app:title="Hora de juego"
                android:label="@string/hora_de_juego_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="5dp"
                android:inputType="number"/>

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>